--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-	<div class="main_content">
+	<div id="main_content">
 		<h1>Guess the Number</h1>
 		<input type="text">
-		<button type="button" id="submit">Submit Your Guess</button>
+		<button type="button" id="submit" class="yellow_button">Submit Your Guess</button>
 		<div class="buttons_container">
-			<button type="button" id="play_again">Play Again</button>
-			<button type="button" id="hint">Give Me a Hint</button>
+			<button type="button" id="play_again" class="blue_button">Play Again</button>
+			<button type="button" id="hint" class="blue_button">Give Me a Hint</button>
 		</div>
 		<div id="status"></div>
 	</div>
