--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
 	<div id="main_content">
-		<h1>Guess the Number</h1>
-		<input type="text">
+		<h1>Pick a number, any number...</h1>
+		<input type="text" placeholder="Number">
 		<button type="button" id="submit" class="yellow_button">Submit Your Guess</button>
-		<div class="buttons_container">
+		<div id="buttons_container">
 			<button type="button" id="play_again" class="blue_button">Play Again</button>
 			<button type="button" id="hint" class="blue_button">Give Me a Hint</button>
 		</div>
-		<div id="status"></div>
+		<div id="status"><span>5</span><br />Guesses Remaining</div>
 	</div>
 
 
