--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<div id="main_content">
 		<h1>Pick a number, any number...</h1>
-		<input type="text" placeholder="Number">
+		<input type="text" placeholder="Number (1-100)">
 		<button type="button" id="submit" class="yellow_button">Submit Your Guess</button>
 		<div id="buttons_container">
 			<button type="button" id="play_again" class="blue_button">Play Again</button>
