Testing submit button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Ashley Riccardi - Guessing Game</title>
 <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700italic,900italic,900,400italic,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="layout.css">
+<script type="text/javascript" src="jquery-1.12.2.min.js"></script>
+<script type="text/javascript" src="guessing-game.js"></script>
 </head>
 <body>
 
@@ -15,7 +17,8 @@
 			<button type="button" id="play_again" class="blue_button">Play Again</button>
 			<button type="button" id="hint" class="blue_button">Give Me a Hint</button>
 		</div>
-		<div id="status"><span>5</span><br />Guesses Remaining</div>
+		<div id="num_guesses"><span>5</span><br />Guesses Remaining</div>
+		<div id="status"></div>
 	</div>
 
 
