Testing jquery inclusion

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>Ashley Riccardi - Guessing Game</title>
 <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700italic,900italic,900,400italic,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="layout.css">
-<script type="text/javascript" src="jquery-1.12.2.min.js"></script>
-<script type="text/javascript" src="guessing-game.js"></script>
+<script src="jquery-1.12.2.min.js"></script>
+<script src="guessing-game.js"></script>
 </head>
 <body>
 
