Added files via upload

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		</div>
 		<div id="num_guesses"><span>5</span><br />Guesses Remaining</div>
 		<div id="status"></div>
+		<div id="gif"></div>
 	</div>
 
 
